--- a/assets/style.css
+++ b/assets/style.css
@@ -324,7 +324,14 @@ a:hover {
 
 .character {
     width: fit-content;
-    margin: auto;
+    margin-left: 10%;
+}
+
+.character img {
+    width: auto;
+    height: 50px;
+    margin: 0;
+    margin-bottom: -10px;
 }
 
 .scale {
@@ -399,14 +406,14 @@ a:hover {
 }
 
 .icons {
-    background: #b4b4b4;
+    background: #fff;
     width: 90%;
     margin: 0 auto;
     border-radius: 12px;
     gap: 4px;
     display: flex;
     padding: 10px 0;
-    box-shadow: 0 0 40px #ffffff6e;
+    box-shadow: 0 0 40px #b4b4b4;
     transition: all .3s ease;
 }
 
@@ -418,7 +425,6 @@ a:hover {
     transition: all 0.3s ease;
     padding-bottom: 10px;
     background: linear-gradient(145deg, #ffffff49, #00000000, #00000000);
-    border: 1px solid #ffffff49;
     transition: all 0.3s ease;
     text-align: center;
 }
